--- a/01static_camera_calibration/02_lstm.ipynb
+++ b/01static_camera_calibration/02_lstm.ipynb
@@ -37,8 +37,16 @@
     "import cv2\n",
     "import torch \n",
     "import numpy.random as rd\n",
-    "import os"
+    "import os\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK']='True'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
